--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </div>
 
     <!-- Audio element for sound effect -->
-    <audio id="solanaSound" src="DO NOT REDEEM THE CARD!.mp3" preload="auto"></audio>
+    <audio id="solanaSound" src="/card.mp3" preload="auto"></audio>
 
     <!-- Import the scripts as modules -->
     <script type="module" src="js/chat.js"></script>
