--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Tech Support Chat - Windows XP Style</title>
+    <title>Definitely not a scam ( DNAS )</title>
     <meta name="description" content="Experience nostalgic Windows XP style AI chat support">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
 <body>
     <div class="desktop">
@@ -43,7 +44,7 @@
             <div class="taskbar-items">
                 <div class="taskbar-item active" data-window="chatWindow">
                     <span class="app-icon"><i class="fas fa-headset"></i></span>
-                    AI Tech Support Chat
+                    Definitely Not a Scam™
                 </div>
             </div>
             <div class="system-tray">
@@ -119,6 +120,14 @@
                 </div>
                 <div class="icon-label">Recycle Bin</div>
             </div>
+            <div class="desktop-icon" onclick="window.open('https://x.com/dnascoin', '_blank')">
+                <div class="icon xp-icon">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                    </svg>
+                </div>
+                <div class="icon-label">X (Twitter)</div>
+            </div>
         </div>
 
         <!-- Main Chat Window -->
@@ -126,7 +135,7 @@
             <div class="window-header">
                 <div class="window-title">
                     <span class="window-icon"><i class="fas fa-headset"></i></span>
-                    AI Tech Support Chat - Definitely Not a Scam™
+                    DNAS - Definitely Not a Scam™
                 </div>
                 <div class="window-controls">
                     <button class="control-btn minimize">−</button>
