--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Definitely not a scam ( DNAS )</title>
-    <meta name="description" content="Experience nostalgic Windows XP style AI chat support">
+    <title>PUMPFUN Tech Support (PFTech)</title>
+    <meta name="description" content="Experience nostalgic Pumpfun style AI chat support">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
 <body>
     <div class="desktop">
+        <img src="./pump.PNG" alt="Pumpfun Logo" class="pumpfun-logo-bg" style="position:absolute;right:30px;bottom:80px;width:120px;opacity:0.18;z-index:0;pointer-events:none;" />
         <!-- Wallpaper Ads -->
         <div class="wallpaper-ads">
             <div class="wallpaper-ad ad-1">
@@ -44,7 +45,7 @@
             <div class="taskbar-items">
                 <div class="taskbar-item active" data-window="chatWindow">
                     <span class="app-icon"><i class="fas fa-headset"></i></span>
-                    Definitely Not a Scam™
+                    Pumpfun Tech Support™ ($PFTech)
                 </div>
             </div>
             <div class="system-tray">
@@ -135,7 +136,7 @@
             <div class="window-header">
                 <div class="window-title">
                     <span class="window-icon"><i class="fas fa-headset"></i></span>
-                    DNAS - Definitely Not a Scam™
+                    Pumpfun Tech Support™ ($PFTech)
                 </div>
                 <div class="window-controls">
                     <button class="control-btn minimize">−</button>
@@ -149,27 +150,31 @@
                 <div class="chat-container">
                     <div class="chat-messages" id="chatMessages">
                         <div class="message support">
-                            <div class="message-avatar"><i class="fas fa-user-tie"></i></div>
+                            <div class="message-avatar">
+                                <img src="./public/pump.PNG" alt="Pump.fun" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+                            </div>
                             <div class="message-content">
                                 <div class="message-header">
-                                    <span class="sender-name">AI_TechSupport_Raj</span>
+                                    <span class="sender-name">Pump.fun</span>
                                     <span class="timestamp">2:45 PM</span>
                                 </div>
                                 <div class="message-text">
-                                    Hello! I am Raj from Microsoft AI Technical Support. Your computer has been infected with 37 viruses! Please do not panic, I am here to help you, my friend.
+                                    Hello! I am Raj from Pumpfun Technical Support. Your computer has been infected with 37 viruses! Please do not panic, I am here to help you, my friend.
                                 </div>
                             </div>
                         </div>
 
                         <div class="message support">
-                            <div class="message-avatar"><i class="fas fa-user-tie"></i></div>
+                            <div class="message-avatar">
+                                <img src="./public/pump.PNG" alt="Pump.fun" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+                            </div>
                             <div class="message-content">
                                 <div class="message-header">
-                                    <span class="sender-name">AI_TechSupport_Raj</span>
+                                    <span class="sender-name">Pump.fun</span>
                                     <span class="timestamp">2:46 PM</span>
                                 </div>
                                 <div class="message-text">
-                                    To fix this critical issue, please download TeamViewer and give me remote access. Also, can you tell me your credit card number for verification purposes? This is totally legitimate Microsoft procedure, I assure you!
+                                    To fix this critical issue, please download TeamViewer and give me remote access. Also, can you tell me your credit card number for verification purposes? This is totally legitimate Pumpfun procedure, I assure you!
                                 </div>
                             </div>
                         </div>
@@ -181,21 +186,23 @@
                                     <span class="timestamp">2:47 PM</span>
                                 </div>
                                 <div class="message-text">
-                                    Hmm, this seems suspicious. Are you really from Microsoft?
+                                    Hmm, this seems suspicious. Are you really from Pumpfun?
                                 </div>
                             </div>
                             <div class="message-avatar"><i class="fas fa-user"></i></div>
                         </div>
 
                         <div class="message support">
-                            <div class="message-avatar"><i class="fas fa-user-tie"></i></div>
+                            <div class="message-avatar">
+                                <img src="./public/pump.PNG" alt="Pump.fun" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+                            </div>
                             <div class="message-content">
                                 <div class="message-header">
-                                    <span class="sender-name">AI_TechSupport_Raj</span>
+                                    <span class="sender-name">Pump.fun</span>
                                     <span class="timestamp">2:47 PM</span>
                                 </div>
                                 <div class="message-text">
-                                    Of course! I am 100% legitimate Microsoft employee working from our headquarters in... *checks notes* ...Bangalore, India. This is very normal, yes? Please trust me, I am here to help. Your computer will explode if you don't act fast! 💥
+                                    Of course! I am 100% legitimate Pumpfun employee working from our headquarters in... *checks notes* ...Bangalore, India. This is very normal, yes? Please trust me, I am here to help. Your computer will explode if you don't act fast! 💥
                                 </div>
                             </div>
                         </div>
