--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Experience nostalgic Pumpfun style AI chat support">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="icon" type="image/png" href="public/pump.PNG">
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 </head>
 <body>
@@ -45,7 +46,7 @@
             <div class="taskbar-items">
                 <div class="taskbar-item active" data-window="chatWindow">
                     <span class="app-icon"><i class="fas fa-headset"></i></span>
-                    Pumpfun Tech Support™ ($PFTech)
+                    Pumpfun Tech Support™ ($PUMP)
                 </div>
             </div>
             <div class="system-tray">
@@ -61,7 +62,7 @@
             <div class="start-menu-header">
                 <div class="user-info">
                     <div class="user-avatar"><i class="fas fa-user"></i></div>
-                    <div class="user-name">User</div>
+                    <div class="user-name">Degen69</div>
                 </div>
             </div>
             <div class="start-menu-items">
@@ -136,7 +137,7 @@
             <div class="window-header">
                 <div class="window-title">
                     <span class="window-icon"><i class="fas fa-headset"></i></span>
-                    Pumpfun Tech Support™ ($PFTech)
+                    Pumpfun Tech Support™ ($PUMP)
                 </div>
                 <div class="window-controls">
                     <button class="control-btn minimize">−</button>
@@ -164,7 +165,7 @@
                                     <span class="timestamp">2:45 PM</span>
                                 </div>
                                 <div class="message-text">
-                                    Hello! I am Raj from Pumpfun Technical Support. Your computer has been infected with 37 viruses! Please do not panic, I am here to help you, my friend.
+                                    Hello! I am Asslon from Pumpfun Technical Support. Your computer has been infected with 37 viruses! Please do not panic, I am here to help you, my friend.
                                 </div>
                             </div>
                         </div>
