--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
     <div class="desktop">
+        <video class="video-wallpaper" autoplay loop muted playsinline>
+            <source src="./public/pftech.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <img src="./pump.PNG" alt="Pumpfun Logo" class="pumpfun-logo-bg" style="position:absolute;right:30px;bottom:80px;width:120px;opacity:0.18;z-index:0;pointer-events:none;" />
         <!-- Wallpaper Ads -->
         <div class="wallpaper-ads">
